--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "html templates for the Purdue Admissions website",
   "main": "index.js",
   "dependencies": {
-    "bootstrap-ie8": "^4.1.3",
-    "gulp": "^3.9.1",
-    "objectFitPolyfill": "^2.1.1"
+    "bootstrap-ie8": "^4.2.1",
+    "gulp": "^4.0.0",
+    "objectFitPolyfill": "^2.1.1",
+    "popper.js": "^1.14.7"
   },
   "devDependencies": {
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.3.1",
     "browser-sync": "^2.26.3",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-clean": "^0.4.0",
@@ -22,7 +23,7 @@
     "gulp-sass": "^4.0.2",
     "jquery": "^3.3.1",
     "merge-stream": "^1.0.1",
-    "mustache": "^3.0.0",
+    "mustache": "^3.0.1",
     "streamqueue": "^1.1.2"
   },
   "scripts": {
