--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "dependencies": {
     "bootstrap-ie8": "^4.2.1",
-    "gulp": "^4.0.0",
+    "glob": "^4.3.1",
     "objectFitPolyfill": "^2.1.1",
     "popper.js": "^1.14.7"
   },
   "devDependencies": {
     "bootstrap": "^4.3.1",
     "browser-sync": "^2.26.3",
+    "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
